--- a/html/home.html
+++ b/html/home.html
@@ -66,11 +66,9 @@
     <hr>
     <h2>代码</h2>
     <div class="click">
-        <a href="../doc/(栈)静态迷宫.pdf">(栈)静态迷宫</a>
+        <a href="../doc/(栈)静态迷宫.txt">(栈)静态迷宫</a>
         <a href="../doc/(栈)动态迷宫.txt">(栈)动态迷宫</a>
-        <a href="../doc/(队列)静态迷宫.pdf">(队列)静态迷宫</a>
-        <a href="../doc/SeqList.pdf">顺序表笔记</a>
-        <a href="../doc/Created%20by%20Lenovo%20on%202022.pdf">单链表笔记</a>
+        <a href="../doc/(队列)静态迷宫.txt">(队列)静态迷宫</a>
     </div>
     <hr>
     <h2>学习</h2>
