--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
 <div class="box">
     <h1>抱歉！该站点已经被管理员停止运行，请联系管理员了解详情！</h1>
 </div>
+<div class="footer-wrapper">
+    <h2>
+        <a href="http://47.113.225.129/html/home.html">国内网</a>
+    </h2>
+    <span>
+        47.113.225.129
+    </span>
+    <h2>
+        <a href="http://www.oahgnaix.xyz/html/home.html">国外网</a>
+    </h2>
+    <span>
+        www.oahgnaix.xyz
+    </span>
+</div>
 </body>
 </html>
