--- a/html/home.html
+++ b/html/home.html
@@ -60,7 +60,7 @@
     <div class="click">
         <a href="../tool/Setup-Screen-Watermark.rar">水印工具.rar</a>
         <a href="../tool/运动世界校园_4.2.7.rar">运动世界校园去广告版.rar</a>
-        <a href="../tool/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
         <a href="utils.html">更多工具。。。</a>
     </div>
     <hr>
