--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3;url=html/home.html">
+    <meta http-equiv="refresh" content="3;url=http://47.113.225.129/html/home.html">
     <title>抱歉，站点已暂停</title>
     <link rel="stylesheet" href="css/index.css"> <!-- 引入样式表 -->
 </head>
