--- a/html/home.html
+++ b/html/home.html
@@ -58,22 +58,24 @@
 <div class="main">
     <h2>工具</h2>
     <div class="click">
-        <a href="../tool/Setup-Screen-Watermark.rar">水印工具.rar</a>
-        <a href="../tool/运动世界校园_4.2.7.rar">运动世界校园去广告版.rar</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/tool/e_5.93_Green.7z">易语言(中文编程)</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/tool/Ziperello.zip">压缩包密码破解</a>
         <a href="utils.html">更多工具。。。</a>
     </div>
     <hr>
     <h2>代码</h2>
     <div class="click">
-        <a href="../doc/(栈)静态迷宫.txt">(栈)静态迷宫</a>
-        <a href="../doc/(栈)动态迷宫.txt">(栈)动态迷宫</a>
-        <a href="../doc/(队列)静态迷宫.txt">(队列)静态迷宫</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E6%A0%88%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(栈)静态迷宫</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E6%A0%88%29%E5%8A%A8%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(栈)动态迷宫</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E9%98%9F%E5%88%97%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(队列)静态迷宫</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E9%98%9F%E5%88%97%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(队列)动态迷宫</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/2020240013%20%E5%90%91%E8%B1%AA%20%E9%A2%86%E8%B5%8F%20%E6%A0%88%2B%E9%98%9F%E5%88%97%20%E5%85%A8%E9%83%A8.rar">附：源码演示</a>
     </div>
     <hr>
     <h2>学习</h2>
     <div class="click">
-        <a href="../doc/C语言图书——尚硅谷.pdf">C语言</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/C%E8%AF%AD%E8%A8%80%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E5%B0%9A%E7%A1%85%E8%B0%B7.pdf">C语言</a>
         <a href="https://www.bilibili.com/video/BV1qJ411z7Hf?spm_id_from=333.1007.top_right_bar_window_history.content.click"
            target="_blank">视频</a>
         <a href="https://github.com/">GitHub开源社区</a>
@@ -84,32 +86,34 @@
     <hr>
     <h2>我的书架</h2>
     <div class="click">
-        <a href="../doc/鸟哥的Linux私房菜+基础学习篇(第三版).pdf">Linux操作系统</a>
-        <a href="../doc/大数据图书.pdf">大数据</a>
-        <a href="../doc/汇编语言%20第四版.pdf">汇编语言</a>
-        <a href="../doc/数据结构与算法图书(Java版)——韩顺平.pdf">数据结构和算法(Java)</a>
-        <a href="../doc/JavaSE图书——韩顺平.pdf">JavaSE</a>
-        <a href="../doc/互联网+技术组预计划.xmind">JSZ</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/%E9%B8%9F%E5%93%A5%E7%9A%84Linux%E7%A7%81%E6%88%BF%E8%8F%9C%2B%E5%9F%BA%E7%A1%80%E5%AD%A6%E4%B9%A0%E7%AF%87%28%E7%AC%AC%E4%B8%89%E7%89%88%29.pdf">Linux操作系统</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/%E5%A4%A7%E6%95%B0%E6%8D%AE%E5%9B%BE%E4%B9%A6.pdf">大数据</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80%20%E7%AC%AC%E5%9B%9B%E7%89%88.pdf">汇编语言</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E5%9B%BE%E4%B9%A6%28Java%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">数据结构和算法(Java)</a>
+        <a href="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/doc/JavaSE%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">JavaSE</a>
     </div>
     <hr>
     <h2>music</h2>
     <div class="music">
         <h4>歌曲：天涯不可及 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls autoplay loop>
-            <source src="../video/天涯不可及.mp3" type="audio/mp3">
-            <embed height="50" width="100" src="../video/天涯不可及.mp3">
+            <source src="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/video/%E5%A4%A9%E6%B6%AF%E4%B8%8D%E5%8F%AF%E5%8F%8A.mp3"
+                    type="audio/mp3">
+            <embed height="50" width="100"
+                   src="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/video/%E5%A4%A9%E6%B6%AF%E4%B8%8D%E5%8F%AF%E5%8F%8A.mp3">
         </audio>
         <h4>歌曲：黄牛叫 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls loop>
-            <source src="../video/music.mp3" type="audio/mp3">
-            <embed height="50" width="100" src="../video/music.mp3">
+            <source src="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/video/music.mp3" type="audio/mp3">
+            <embed height="50" width="100"
+                   src="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/video/music.mp3">
         </audio>
     </div>
     <hr style="margin-top: 200px">
     <div class="video">
         <!-- seamless 看起来像自己的页面一样，只有谷歌和Safari6支持 -->
-        <iframe height="100%" width="100%" seamless
-                src="//player.bilibili.com/player.html?aid=681959192&bvid=BV1PU4y1f7Vu&cid=541491755&page=1">
+        <iframe height="100%" width="100%"
+                src="https://oahgnaix-1311335496.cos.ap-chongqing.myqcloud.com/video/liuhengheng.mp4">
             您的浏览器不支持加载该视频
         </iframe>
     </div>
