--- a/html/home.html
+++ b/html/home.html
@@ -113,7 +113,7 @@
     <div class="video">
         <!-- seamless 看起来像自己的页面一样，只有谷歌和Safari6支持 -->
         <iframe height="100%" width="100%"
-                src="http://ramgjjorm.hn-bkt.clouddn.com/video/liuhengheng.mp4">
+                src="//player.bilibili.com/player.html?aid=467010252&bvid=BV1CL411N7ba&cid=544990812&page=1">
             您的浏览器不支持加载该视频
         </iframe>
     </div>
