--- a/index.html
+++ b/index.html
@@ -2,27 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://47.113.225.129/html/home.html">
-    <title>抱歉，站点已暂停</title>
+    <meta http-equiv="refresh" content="0;url=http://www.oahgnaix.xyz/html/home.html">
+    <title>请等待，网站跳转中</title>
     <link rel="stylesheet" href="css/index.css"> <!-- 引入样式表 -->
 </head>
 <body>
 <div class="box">
-    <h1>抱歉！该站点已经被管理员停止运行，请联系管理员了解详情！</h1>
-</div>
-<div class="footer-wrapper">
-    <h2>
-        <a href="http://47.113.225.129/html/home.html">国内网</a>
-    </h2>
-    <span>
-        47.113.225.129
-    </span>
-    <h2>
-        <a href="http://www.oahgnaix.xyz/html/home.html">国外网</a>
-    </h2>
-    <span>
-        www.oahgnaix.xyz
-    </span>
+    <h1>跳转中，请稍后。。。</h1>
 </div>
 </body>
 </html>
