--- a/html/home.html
+++ b/html/home.html
@@ -61,7 +61,7 @@
         <a href="javascript:">易语言(中文编程)</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
         <a href="javascript:">压缩包密码破解</a>
-        <a href="utils.html">更多工具。。。</a>
+        <a href="utils.html" target="_blank">更多工具。。。</a>
     </div>
     <hr>
     <h2>代码</h2>
