--- a/html/home.html
+++ b/html/home.html
@@ -60,7 +60,7 @@
     <div class="click">
         <a href="javascript:">易语言(中文编程)</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
-        <a href="javascript:">压缩包密码破解</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/%E8%BF%90%E5%8A%A8%E4%B8%96%E7%95%8C%E6%A0%A1%E5%9B%AD.apk">运动世界校园(无广告版)</a>
         <a href="utils.html" target="_blank">更多工具。。。</a>
     </div>
     <hr>
