--- a/html/home.html
+++ b/html/home.html
@@ -58,7 +58,7 @@
 <div class="main">
     <h2>工具</h2>
     <div class="click">
-        <a href="javascript:">易语言(中文编程)</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/e_5.93_Green.7z">易语言(中文编程)</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/%E8%BF%90%E5%8A%A8%E4%B8%96%E7%95%8C%E6%A0%A1%E5%9B%AD.apk">运动世界校园(无广告版)</a>
         <a href="utils.html" target="_blank">更多工具。。。</a>
@@ -75,7 +75,7 @@
     <hr>
     <h2>学习</h2>
     <div class="click">
-        <a href="javascript:">C语言</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/C%E8%AF%AD%E8%A8%80%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E5%B0%9A%E7%A1%85%E8%B0%B7.pdf">C语言</a>
         <a href="https://www.bilibili.com/video/BV1qJ411z7Hf?spm_id_from=333.1007.top_right_bar_window_history.content.click"
            target="_blank">视频</a>
         <a href="https://github.com/">GitHub开源社区</a>
@@ -86,11 +86,11 @@
     <hr>
     <h2>我的书架</h2>
     <div class="click">
-        <a href="javascript:">Linux操作系统</a>
-        <a href="javascript:">大数据</a>
-        <a href="javascript:">汇编语言</a>
-        <a href="javascript:">数据结构和算法(Java)</a>
-        <a href="javascript:">JavaSE</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/Linux%E5%9B%BE%E4%B9%A6%282021%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">Linux操作系统</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%A4%A7%E6%95%B0%E6%8D%AE%E5%9B%BE%E4%B9%A6.pdf">大数据</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80%20%E7%AC%AC%E5%9B%9B%E7%89%88.pdf">汇编语言</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E5%9B%BE%E4%B9%A6%28Java%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">数据结构和算法(Java)</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/JavaSE%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">JavaSE</a>
     </div>
     <hr>
     <h2>music</h2>
