--- a/html/utils.html
+++ b/html/utils.html
@@ -54,13 +54,13 @@
                 <a href="tool/PDF%E6%A0%BC%E5%BC%8F%E8%BD%AC%E6%8D%A2%E5%99%A8.rar">PDF格式转换器</a>
             </th>
             <th>
-                <a href="tool/livetool35-lit.rar">讲课助手</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/livetool35-lit.rar">讲课助手</a>
             </th>
             <th>
-                <a href="tool/ScreenToGif.2.36.Light.Setup.x64.rar">ScreenToGif录屏</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ScreenToGif.2.36.Light.Setup.x64.rar">ScreenToGif录屏</a>
             </th>
             <th>
-                <a href="tool/pmlxzj20210908.zip">屏幕录像专家</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/pmlxzj20210908.zip">屏幕录像专家</a>
             </th>
             <th>
                 <a href="tool/IBM%E5%B7%A5%E5%85%B7REVIT.rar">Revit2017</a>
@@ -76,22 +76,22 @@
         </tr>
         <tr>
             <th>
-                <a href="tool/mysql-5.7.37-winx64.zip">MySQL5.7版本</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/mysql-5.7.37-winx64.zip">MySQL5.7版本</a>
             </th>
             <th>
-                <a href="tool/SQLyog.zip">SQLyog破解版 SQL操作台</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/SQLyog.zip">SQLyog破解版 SQL操作台</a>
             </th>
             <th>
-                <a href="tool/navicat160_premium_cs_x64.rar">Navicat_premium_16_破解版</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/navicat160_premium_cs_x64.rar">Navicat_premium_16_破解版</a>
             </th>
             <th>
-                <a href="tool/winrar-x64-600scp.exe">WinRAR压缩工具</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/winrar-x64-600scp.exe">WinRAR压缩工具</a>
             </th>
             <th>
-                <a href="tool/ScreenW_44796.zip">水印工具(破解)</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ScreenW_44796.zip">水印工具(破解)</a>
             </th>
             <th>
-                <a href="tool/ciscopacketracer.rar">CiscoPacketTracer</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ciscopacketracer.zip">CiscoPacketTracer</a>
             </th>
         </tr>
         <tr>
@@ -107,7 +107,7 @@
                 <a href="tool/Microsoft%20Office%202013.zip">MicrosoftOffice办公软件-2013破解版本</a>
             </th>
             <th>
-                <a href="javascript:">压缩包密码破解</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/Ziperello.zip">压缩包密码破解</a>
             </th>
             <th>
                 <a href="javascript:"></a>
