--- a/html/utils.html
+++ b/html/utils.html
@@ -110,7 +110,7 @@
                 <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/Ziperello.zip">压缩包密码破解</a>
             </th>
             <th>
-                <a href="javascript:"></a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/e_5.93_Green.7z">易语言(中文编程)</a>
             </th>
             <th>
                 <a href="javascript:"></a>
@@ -127,7 +127,11 @@
                 2013套件对此作出了极大的改进，将Office2010文件打开起始时的3D带状图像取消了，增加了大片的单一的图像
             </td>
             <td>内含多种破解密码方式。选择组合破解、暴力破解、字典破解</td>
-            <td></td>
+            <td>
+                易语言（EPL）是一门以中文作为程序代码编程语言，其以“易”著称，创始人为吴涛。其最早的版本的发
+                布可追溯至2000年9月11日。创造易语言的初衷是进行用中文来编写程序的实践，方便中国人以中国人的思
+                维编写程序，并不用再去学习西方思维。易语言的诞生极大的降低了编程的门槛和学习的难度
+            </td>
             <td></td>
             <td></td>
             <td></td>
