--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- 兼容性 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>向豪的网站</title>
+    <title>我的个人网站</title>
     <!-- 引擎检索 -->
     <meta name="keywords" content="个人网站，个人博客，允许通过搜索引擎检索关键字">
     <meta name="description" content="这是一个属于向豪的个人网站">
