--- a/html/home.html
+++ b/html/home.html
@@ -59,7 +59,7 @@
     <h2>工具</h2>
     <div class="click">
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/HCJavaScript.rar">自动刷[好策]js脚本</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
+        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
         <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/%E8%BF%90%E5%8A%A8%E4%B8%96%E7%95%8C%E6%A0%A1%E5%9B%AD.rar">运动世界校园(无广告版)</a>
         <a href="utils.html" target="_blank">更多工具。。。</a>
     </div>
