--- a/slqx/index.html
+++ b/slqx/index.html
@@ -108,20 +108,35 @@
 </nav>
 <!-- 轮播图 -->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- 轮播点区域 -->
+    <!-- 轮播点区域 x5 -->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
     </ol>
 
-    <!-- 轮播图区域 -->
+    <!-- 轮播图区域 x5 -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo04.webp" alt="#">
+            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo05.jpg" alt="你的浏览器不支持...">
             <div class="carousel-caption"></div>
         </div>
         <div class="item">
-            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo03.webp" alt="#">
+            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo05.jpg" alt="你的浏览器不支持...">
+            <div class="carousel-caption"></div>
+        </div>
+        <div class="item">
+            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo05.jpg" alt="你的浏览器不支持...">
+            <div class="carousel-caption"></div>
+        </div>
+        <div class="item">
+            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo05.jpg" alt="你的浏览器不支持...">
+            <div class="carousel-caption"></div>
+        </div>
+        <div class="item">
+            <img src="http://ramgjjorm.hn-bkt.clouddn.com/slqx/img/lunbo/lunbo05.jpg" alt="你的浏览器不支持...">
             <div class="carousel-caption"></div>
         </div>
     </div>
