--- a/slqx/index.html
+++ b/slqx/index.html
@@ -107,7 +107,7 @@
     </div>
 </nav>
 <!-- 轮播图 -->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide hidden-xs" data-ride="carousel">
     <!-- 轮播点区域 x5 -->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
