--- a/html/home.html
+++ b/html/home.html
@@ -15,15 +15,14 @@
     <!-- 引入重置浏览器默认样式css -->
     <link rel="stylesheet" href="../css/reset.css">
     <!-- 引入css格式 -->
-    <link rel="stylesheet" href="../css/home.css"/>
-    <!-- 导航栏样式 -->
-    <link rel="stylesheet" href="../css/navigation.css"/>
+    <link rel="stylesheet" href="../css/home.min.css"/>
+    <link rel="stylesheet" href="../css/style.min.css">
     <!-- JS -->
     <script type="text/javascript" src="../js/jquery.min.js"></script>
 </head>
 <body>
 <!-- 盒子标签 矩形区域(长方形) 大小(宽高) 标签区分 class(类名)命名 命名规范化 见名知意 英文单词 -->
-<div class="header">
+<div class="header w">
     <div class="mouth">
         <div class="top"></div>
         <div class="bottom"></div>
@@ -55,45 +54,84 @@
         </li>
     </ul>
 </div>
-<div class="main">
-    <h2>工具</h2>
+<div class="main w clearfix">
+    <h2 class="main-title">工具</h2>
     <div class="click">
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/HCJavaScript.rar">自动刷[好策]js脚本</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/%E8%BF%90%E5%8A%A8%E4%B8%96%E7%95%8C%E6%A0%A1%E5%9B%AD.rar">运动世界校园(无广告版)</a>
-        <a href="utils.html" target="_blank">更多工具。。。</a>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/HCJavaScript.rar">自动刷[好策]js脚本</a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/%E8%BF%90%E5%8A%A8%E4%B8%96%E7%95%8C%E6%A0%A1%E5%9B%AD.rar">运动世界校园(无广告版)</a>
+        </div>
+        <div>
+            <a href="utils.html" target="_blank">更多工具。。。</a>
+        </div>
     </div>
     <hr>
-    <h2>代码</h2>
+    <h2 class="main-title">代码</h2>
     <div class="click">
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E6%A0%88%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(栈)静态迷宫</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E6%A0%88%29%E5%8A%A8%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(栈)动态迷宫</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E9%98%9F%E5%88%97%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(队列)静态迷宫</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%28%E9%98%9F%E5%88%97%29%E9%9D%99%E6%80%81%E8%BF%B7%E5%AE%AB.pdf">(队列)动态迷宫</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/2020240013%20%E5%90%91%E8%B1%AA%20%E9%A2%86%E8%B5%8F%20%E6%A0%88%2B%E9%98%9F%E5%88%97%20%E5%85%A8%E9%83%A8.rar">附：源码演示</a>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%AE%9E%E9%AA%8C5%20%E4%BA%8C%E5%8F%89%E6%A0%91%281%EF%BC%89.pdf">
+                二叉树 实验一
+            </a>
+            <p class="author">作者：苏恒</p>
+        </div>
     </div>
     <hr>
-    <h2>学习</h2>
+    <h2 class="main-title">学习</h2>
     <div class="click">
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/C%E8%AF%AD%E8%A8%80%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E5%B0%9A%E7%A1%85%E8%B0%B7.pdf">C语言</a>
-        <a href="https://www.bilibili.com/video/BV1qJ411z7Hf?spm_id_from=333.1007.top_right_bar_window_history.content.click"
-           target="_blank">视频</a>
-        <a href="https://github.com/">GitHub开源社区</a>
-        <a href="../img/search.jpg">GitHub使用手册</a>
-        <a href="https://www.runoob.com/html/html-tutorial.html">菜鸟教程</a>
-        <a href="https://www.52pojie.cn/">吾爱破解论坛</a>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/C%E8%AF%AD%E8%A8%80%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E5%B0%9A%E7%A1%85%E8%B0%B7.pdf">
+                C语言
+            </a>
+        </div>
+        <div>
+            <a href="https://github.com/">GitHub开源社区</a>
+        </div>
+        <div>
+            <a href="../img/search.jpg">GitHub使用手册</a>
+        </div>
+        <div>
+            <a href="https://www.runoob.com/html/html-tutorial.html">菜鸟教程</a>
+        </div>
+        <div>
+            <a href="https://www.52pojie.cn/">吾爱破解论坛</a>
+        </div>
     </div>
     <hr>
-    <h2>我的书架</h2>
+    <h2 class="main-title">我的书架</h2>
     <div class="click">
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/Linux%E5%9B%BE%E4%B9%A6%282021%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">Linux操作系统</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%A4%A7%E6%95%B0%E6%8D%AE%E5%9B%BE%E4%B9%A6.pdf">大数据</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80%20%E7%AC%AC%E5%9B%9B%E7%89%88.pdf">汇编语言</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E5%9B%BE%E4%B9%A6%28Java%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">数据结构和算法(Java)</a>
-        <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/JavaSE%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">JavaSE</a>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/Linux%E5%9B%BE%E4%B9%A6%282021%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">
+                Linux操作系统
+            </a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%A4%A7%E6%95%B0%E6%8D%AE%E5%9B%BE%E4%B9%A6.pdf">
+                大数据
+            </a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%B1%87%E7%BC%96%E8%AF%AD%E8%A8%80%20%E7%AC%AC%E5%9B%9B%E7%89%88.pdf">
+                汇编语言
+            </a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E5%9B%BE%E4%B9%A6%28Java%E7%89%88%29%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">
+                数据结构和算法(Java)
+            </a>
+        </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/JavaSE%E5%9B%BE%E4%B9%A6%E2%80%94%E2%80%94%E9%9F%A9%E9%A1%BA%E5%B9%B3.pdf">
+                JavaSE
+            </a>
+        </div>
     </div>
     <hr>
-    <h2>music</h2>
+    <h2 class="main-title">music</h2>
     <div class="music">
         <h4>歌曲：天涯不可及 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls autoplay loop>
@@ -123,7 +161,10 @@
 </div>
 
 <div class="footer">
-    <h2>&copy;小象工作室</h2>
+    <h2 class="copyright">
+        &copy;小象工作室
+    </h2>
+    <p class="copyright-info">本网站仅供学习使用</p>
 </div>
 <script type="text/javascript" src="../js/rotation_map.js"></script>
 <script type="text/javascript" src="../js/navigation.js"></script>
