--- a/html/home.html
+++ b/html/home.html
@@ -131,7 +131,7 @@
         </div>
     </div>
     <hr>
-    <h2 class="main-title">music</h2>
+    <h2 class="main-title">MUSIC</h2>
     <div class="music">
         <h4>歌曲：天涯不可及 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls autoplay loop>
