--- a/html/home.html
+++ b/html/home.html
@@ -79,6 +79,12 @@
             </a>
             <p class="author">作者：苏恒</p>
         </div>
+        <div>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%AE%9E%E9%AA%8C5%20%E4%BA%8C%E5%8F%89%E6%A0%91%281%EF%BC%89.pdf">
+                二叉树 实验一
+            </a>
+            <p class="author">作者：站长</p>
+        </div>
     </div>
     <hr>
     <h2 class="main-title">学习</h2>
