--- a/html/home.html
+++ b/html/home.html
@@ -74,13 +74,15 @@
     <h2 class="main-title">代码</h2>
     <div class="click">
         <div>
-            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%AE%9E%E9%AA%8C5%20%E4%BA%8C%E5%8F%89%E6%A0%91%281%EF%BC%89.pdf">
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%AE%9E%E9%AA%8C5%20%E4%BA%8C%E5%8F%89%E6%A0%91%281%EF%BC%89.pdf"
+               target="_blank">
                 二叉树 实验一
             </a>
             <p class="author">作者：苏恒</p>
         </div>
         <div>
-            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E5%AE%9E%E9%AA%8C5%20%E4%BA%8C%E5%8F%89%E6%A0%91%281%EF%BC%89.pdf">
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/doc/%E4%BA%8C%E5%8F%89%E6%A0%91%E5%AE%9E%E9%AA%8C%E4%B8%80.pdf"
+               target="_blank">
                 二叉树 实验一
             </a>
             <p class="author">作者：站长</p>
