--- a/html/utils.html
+++ b/html/utils.html
@@ -76,7 +76,7 @@
         </tr>
         <tr>
             <th>
-                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/mysql-5.7.37-winx64.zip">MySQL5.7版本</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool%2Fmysql-5.7.37-winx64.zip">MySQL5.7版本</a>
             </th>
             <th>
                 <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/SQLyog.zip">SQLyog破解版 SQL操作台</a>
@@ -95,7 +95,7 @@
             </th>
         </tr>
         <tr>
-            <td>MySQL5.7版本是MySQL系列中最稳定的版本，推荐下载（附：配置步骤）。其它版本可以前往官网下载:https://dev.mysql.com</td>
+            <td>MySQL5.7版本是MySQL系列中最稳定的版本，推荐下载（附：详细配置步骤）。其它版本可以前往官网下载:https://dev.mysql.com</td>
             <td>SQLyog是一款中文SQL操作台，支持图形化操作和命令行</td>
             <td>Navicat Premium 16也是一款简单好用中文版图形化操作台，需要注意的是需要定期破解[搭建一个定期运行脚本即可]，这里破解的是试用期</td>
             <td>支持rar、zip压缩，压缩率高、速度快</td>
@@ -113,13 +113,13 @@
                 <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/e_5.93_Green.7z">易语言(中文编程)</a>
             </th>
             <th>
-                <a href="javascript:"></a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/mysql-5.7.37-winx64.zip">Java JDK8-301</a>
             </th>
             <th>
-                <a href="javascript:"></a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/xmind-8-update8-windows.rar">X-Mind8 思维导图</a>
             </th>
             <th>
-                <a href="javascript:"></a>
+                <a href="javascript:">小丸工具箱(音视频合成功能)</a>
             </th>
         </tr>
         <tr>
@@ -132,9 +132,15 @@
                 布可追溯至2000年9月11日。创造易语言的初衷是进行用中文来编写程序的实践，方便中国人以中国人的思
                 维编写程序，并不用再去学习西方思维。易语言的诞生极大的降低了编程的门槛和学习的难度
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+                JDK是 Java 语言的软件开发工具包，主要用于移动设备、嵌入式设备上的java应用程序。JDK是整个java开发的核心，它包含了JAVA的运行环境，JAVA工具和JAVA基础的类库
+            </td>
+            <td>
+                快速简单易上手的一款思维导图工具，可以让你体验到思维导图、思维风暴带来的无穷魅力，点击下载去尝试制作一张属于自己的思维导图
+            </td>
+            <td>
+                小丸工具箱是一款用于处理音视频等多媒体文件的软件。是一款x264、ffmpeg等命令行程序的图形界面。它的目标是让视频压制变得简单、轻松
+            </td>
         </tr>
         <tr>
             <th>
