--- a/html/utils.html
+++ b/html/utils.html
@@ -119,7 +119,7 @@
                 <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/xmind-8-update8-windows.rar">X-Mind8 思维导图</a>
             </th>
             <th>
-                <a href="javascript:">小丸工具箱(音视频合成功能)</a>
+                <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/566891.rar">小丸工具箱(音视频合成功能)</a>
             </th>
         </tr>
         <tr>
