--- a/html/home.html
+++ b/html/home.html
@@ -58,7 +58,7 @@
     <h2 class="main-title">工具</h2>
     <div class="click">
         <div>
-            <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/HCJavaScript.rar">自动刷[好策]js脚本</a>
+            <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool%2FHCJavaScript.rar">自动刷[好策]js脚本</a>
         </div>
         <div>
             <a href="http://ramgjjorm.hn-bkt.clouddn.com/tool/ToDesk_Setup.rar">ToDesk远程控制.rar</a>
