--- a/html/home.html
+++ b/html/home.html
@@ -8,7 +8,7 @@
     <title>我的个人网站</title>
     <!-- 引擎检索 -->
     <meta name="keywords" content="个人网站，个人博客，允许通过搜索引擎检索关键字">
-    <meta name="description" content="这是一个属于向豪的个人网站">
+    <meta name="description" content="这是一个属于向豪的个人网站，本网站仅供学习使用">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 引入logo -->
     <link rel="icon" type="image/x-icon" href="../img/logo.png"/>
