--- a/html/utils.html
+++ b/html/utils.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tool</title>
+    <meta name="description" content="这是一个属于向豪的个人网站，本网站仅供学习使用">
     <link rel="icon" type="image/x-icon" href="../img/logo.png"/> <!-- 引入logo -->
     <link rel="stylesheet" href="../css/utils.css"/> <!-- 引入css格式 -->
 </head>
