--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="">自动刷[好策]js脚本</a>
         </div>
         <div>
-            <a href="">ToDesk远程控制.rar</a>
+            <a href="http://rbrn8fxwa.hn-bkt.clouddn.com/website%2FToDesk_Setup.rar">ToDesk远程控制.rar</a>
         </div>
         <div>
             <a href="">运动世界校园(无广告版)</a>
