--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- 让IE以edge版本状态匹配 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- 通过为视口（viewport）设置 meta 属性为 user-scalable=no 可以禁用其缩放（zooming）功能 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <!-- 搜索引擎识别内容区 -->
     <title>我的个人网站</title>
@@ -63,7 +63,7 @@
             <a href="">自动刷[好策]js脚本</a>
         </div>
         <div>
-            <a href="">ToDesk远程控制.rar</a>
+            <a href="http://rbrn8fxwa.hn-bkt.clouddn.com/website%2FToDesk_Setup.rar">ToDesk远程控制.rar</a>
         </div>
         <div>
             <a href="">运动世界校园(无广告版)</a>
