--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
             <a href="">自动刷[好策]js脚本</a>
         </div>
         <div>
-            <a href="http://rbrn8fxwa.hn-bkt.clouddn.com/website%2FToDesk_Setup.rar">ToDesk远程控制.rar</a>
+            <a href="http://rbrn8fxwa.hn-bkt.clouddn.com/website/tool/ToDesk_Setup.rar">ToDesk远程控制</a>
         </div>
         <div>
-            <a href="">运动世界校园(无广告版)</a>
+            <a href="">MySQL[5.7.37]附:完整配置步骤</a>
         </div>
         <div>
-            <a href="">MySQL5.7版本</a>
+            <a href="">SQLYog[MySQL操作台-破解版]</a>
+        </div>
+        <div>
+            <a href="">Navicat[MySQL操作台-破解版]</a>
+        </div>
+        <div>
+            <a href="http://rbrn8fxwa.hn-bkt.clouddn.com/website/tool/ToDesk_Setup.rar">屏幕录像专家[破解版]</a>
         </div>
     </div>
     <hr>
