--- a/index.html
+++ b/index.html
@@ -82,21 +82,32 @@
     <h2 class="main-title">代码</h2>
     <div class="click">
         <div>
-            <a href="./xh/doc/binary_tree_ergodic_sh.pdf"
+            <a href="xh/html/rand10Factor.html" target="_blank">C语言代码</a>
+            <p class="author">&nbsp;</p>
+        </div>
+        <div>
+            <a href="xh/html/graph-traverse.html" target="_blank">图 实验一</a>
+            <p class="author">&nbsp;</p>
+        </div>
+        <div>
+            <a href="./xh/html/auto-create-binary-ree.html"
+               target="_blank">
+                二叉树 实验二
+            </a>
+            <p class="author">作者：苏恒</p>
+        </div>
+        <div>
+            <a href="./xh/html/binary-tree-ergodic-sh.html"
                target="_blank">
                 二叉树 实验一
             </a>
             <p class="author">作者：苏恒</p>
         </div>
         <div>
-            <a href="./xh/doc/binary_tree_ergodic_xh.pdf"
+            <a href="./xh/html/binary-tree-ergodic-xh.html"
                target="_blank">
                 二叉树 实验一
             </a>
-            <p class="author">作者：站长</p>
-        </div>
-        <div>
-            <a href="xh/html/rand10Factor.html" target="_blank">C语言代码</a>
             <p class="author">&nbsp;</p>
         </div>
     </div>
