--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                target="_blank">
                 二叉树 实验一
             </a>
-            <p class="author">&nbsp;</p>
+            <p class="author">站长</p>
         </div>
     </div>
     <hr>
