--- a/xh/html/rand10Factor.html
+++ b/xh/html/rand10Factor.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <!-- 搜索引擎识别内容区 -->
-    <title>我的个人网站</title>
+    <title>C语言代码</title>
     <!-- 引擎检索 -->
     <meta name="keywords" content="个人网站，个人博客，允许通过搜索引擎检索关键字">
     <meta name="description" content="这是一个属于向豪的个人网站，本网站仅供学习使用">
