--- a/index.html
+++ b/index.html
@@ -82,33 +82,10 @@
     <h2 class="main-title">代码</h2>
     <div class="click">
         <div>
-            <a href="xh/html/rand10Factor.html" target="_blank">C语言代码</a>
-            <p class="author">&nbsp;</p>
-        </div>
-        <div>
-            <a href="xh/html/graph-traverse.html" target="_blank">图 实验一</a>
-            <p class="author">&nbsp;</p>
-        </div>
-        <div>
-            <a href="./xh/html/auto-create-binary-ree.html"
+            <a href="https://oahgnaix.gitee.io/xh"
                target="_blank">
-                二叉树 实验二
+                想要代码？点我 点我
             </a>
-            <p class="author">作者：苏恒</p>
-        </div>
-        <div>
-            <a href="./xh/html/binary-tree-ergodic-sh.html"
-               target="_blank">
-                二叉树 实验一
-            </a>
-            <p class="author">作者：苏恒</p>
-        </div>
-        <div>
-            <a href="./xh/html/binary-tree-ergodic-xh.html"
-               target="_blank">
-                二叉树 实验一
-            </a>
-            <p class="author">站长</p>
         </div>
     </div>
     <hr>
