--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2 class="main-title">学习</h2>
     <div class="click">
         <div>
-            <a href="">
+            <a href="https://oahgnaix.gitee.io/website-repository/doc/C语言图书——尚硅谷.pdf">
                 C语言
             </a>
         </div>
