--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <h2 class="main-title">工具</h2>
     <div class="click">
         <div>
+            <a href="">小熊猫[C语言编译器]</a>
+        </div>
+        <div>
+            <a href="https://oahgnaix.lanzouf.com/i26Rt04yhd4d">Java后端实现登录所需页面</a>
+        </div>
+        <div>
             <a href="https://oahgnaix.lanzouf.com/im88P04vdkwb">自动刷[好策]js脚本</a>
         </div>
         <div>
