--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <h2 class="main-title">学习</h2>
     <div class="click">
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/C语言图书——尚硅谷.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/C语言图书——尚硅谷.pdf">
                 C语言
             </a>
         </div>
@@ -112,7 +112,7 @@
             <a href="https://github.com/">GitHub开源社区</a>
         </div>
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/images/github/search.jpg">GitHub使用手册</a>
+            <a href="http://oahgnaix.gitee.io/website-repository/images/github/search.jpg">GitHub使用手册</a>
         </div>
         <div>
             <a href="https://www.runoob.com/html/html-tutorial.html">菜鸟教程</a>
@@ -125,27 +125,27 @@
     <h2 class="main-title">我的书架</h2>
     <div class="click">
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/Linux图书(2021版)——韩顺平.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/Linux图书(2021版)——韩顺平.pdf">
                 Linux操作系统
             </a>
         </div>
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/大数据图书.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/大数据图书.pdf">
                 大数据
             </a>
         </div>
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/汇编语言 第四版.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/汇编语言 第四版.pdf">
                 汇编语言
             </a>
         </div>
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/数据结构与算法图书(Java版)——韩顺平.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/数据结构与算法图书(Java版)——韩顺平.pdf">
                 数据结构和算法(Java)
             </a>
         </div>
         <div>
-            <a href="https://oahgnaix.gitee.io/website-repository/doc/JavaSE图书——韩顺平.pdf">
+            <a href="http://oahgnaix.gitee.io/website-repository/doc/JavaSE图书——韩顺平.pdf">
                 JavaSE
             </a>
         </div>
@@ -155,14 +155,14 @@
     <div class="music">
         <h4>歌曲：天涯不可及 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls autoplay loop>
-            <source src="https://oahgnaix.gitee.io/website-repository/music/天涯不可及.mp3"
+            <source src="http://oahgnaix.gitee.io/website-repository/music/天涯不可及.mp3"
                     type="audio/mp3">
             <embed height="50" width="100"
                    src="">
         </audio>
         <h4>歌曲：黄牛叫 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls loop>
-            <source src="https://oahgnaix.gitee.io/website-repository/music/music.mp3" type="audio/mp3">
+            <source src="http://oahgnaix.gitee.io/website-repository/music/music.mp3" type="audio/mp3">
             <embed height="50" width="100"
                    src="">
         </audio>
