--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="main-title">工具</h2>
     <div class="click">
         <div>
-            <a href="">小熊猫[C语言编译器]</a>
+            <a href="https://oahgnaix.lanzouf.com/iR40R04yle7g">小熊猫[C语言编译器]</a>
         </div>
         <div>
             <a href="https://oahgnaix.lanzouf.com/i26Rt04yhd4d">Java后端实现登录所需页面</a>
