--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <h2 class="main-title">工具</h2>
     <div class="click">
         <div>
+            <a href="https://oahgnaix.lanzouf.com/iOTdB057nsti">火绒安全实验室[去除360广告]</a>
+        </div>
+        <div>
+            <a href="https://oahgnaix.lanzouf.com/iMNbb057nvwj">谷歌官方正版浏览器[X8核]</a>
+        </div>
+        <div>
             <a href="https://oahgnaix.lanzouf.com/iR40R04yle7g">小熊猫[C语言编译器]</a>
         </div>
         <div>
