悲情MV男主角

--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
     <div class="music">
         <h4>歌曲：悲情MV男主角 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ——演唱：冯枭</h4>
         <audio style="width: 100%; height: 100%" controls loop>
-            <source src="http://oahgnaix.gitee.io/website-repository/music/悲情MV男主角.mp3"
-                    type="audio/mp3">
+            <source src="http://oahgnaix.gitee.io/website-repository/music/悲情MV男主角.mp3" type="audio/mp3">
             <embed height="50" width="100"
                    src="">
         </audio>
