--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             <a href="https://oahgnaix.lanzouf.com/iOTdB057nsti">火绒安全实验室[去除360广告]</a>
         </div>
         <div>
+            <a href="https://oahgnaix.lanzouf.com/iOZdh05ur12b">Microsoft Edge浏览器[微软]</a>
+        </div>
+        <div>
             <a href="https://oahgnaix.lanzouf.com/iMNbb057nvwj">谷歌官方正版浏览器[X8核]</a>
         </div>
         <div>
