--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     <hr>
     <h2 class="main-title">代码</h2>
     <div class="click">
-        <div>
-            <a href="https://oahgnaix.gitee.io/xh"
-               target="_blank">
+        <div id="myBlog">
+            <!-- href="http://oahgnaix.gitee.io/xh" target="_blank"-->
+            <a href="javascript:">
                 想要代码？点我 点我
             </a>
         </div>
@@ -217,5 +217,6 @@
 <!-- 本网页的JS -->
 <script type="text/javascript" src="xh/js/rotation_map.js"></script>
 <script type="text/javascript" src="xh/js/navigation.js"></script>
+<script type="text/javascript" src="xh/js/index.js"></script>
 </body>
 </html>
