--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="click">
         <div id="myBlog">
             <!-- href="http://oahgnaix.gitee.io/xh" target="_blank"-->
-            <a href="javascript:">
+            <a href="http://oahgnaix.gitee.io/xh" target="_blank">
                 想要代码？点我 点我
             </a>
         </div>
